# sql-guard

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-package.yml
docs/: demo.ipynb  demo_duckdb.ipynb  insert_values_into_student.sql
src/sql_guard/: __init__.py
src/sql_guard/translators/: PanderaMapping.py  SchemaParsers.py
src/sql_guard/validator/: CheckBase.py  CheckImplementations.py  SQLDataSchema.py  SQLValidator.py
src/sqlvalidator/: SQLDataSchema.py  __init__.py
tests/translators/: test_pandera_parser.py
tests/validator/: test_check_implementations.py  test_check_implementations_duckdb.py
